<resources>
    <string name="app_name">FMPlayer</string>
    <string name="fm_radio">FM Radio</string>
    <string name="clear_all_presets">Clear all favorites</string>
    <string name="clear_preset">Clear favorite</string>
    <string name="add_to_preset">Add To favorite</string>
    <string name="fm_add_as_favorite">Add as favorite</string>
    <string name="fm_unmark_as_favorite">Unmark as favorite</string>
    <string name="music_home">Music home</string>
    <string name="settings">Settings</string>
    <string name="switch_to_speaker">Switch to speaker</string>
    <string name="switch_to_headset">Switch to headphones</string>
    <string name="available">Available</string>
    <string name="fm_volume_message">FM Radio Volume</string>
    <string name="starting_up_fm">Launching FM radio, please wait ...</string>
    <string name="airplane_mode_enabled">Airplane mode enabled</string>
    <string name="fm_airplane_mode">To use FM radio, please turn off Airplane mode.</string>
    <string name="headphones_required">Attach headphones</string>
    <string name="headphones_required_msg">Please connect your headphones to this device before using the FM Radio. The headphones act as an antenna.</string>
    <string name="headphones_unplugged">Headphone is unplugged.</string>
    <string name="confirm_clear_presets">Are you sure you want to clear all your favorite stations?</string>
    <string name="your_presets_are_empty">Presets stations list is empty.</string>
    <string name="fmradio_service_label">FM radio player service</string>
    <string name="music_playing">Music is playing</string>
    <string name="fm_service_start_error_title">FM radio Service Start Failed</string>
    <string name="fm_auto_seek_start">Station Seek Activated. Touch the screen to stop.</string>
    <string name="fm_service_start_error_msg">FM radio experienced a problem and will exit now. Try launching FM radio again.</string>
    <string name="fm_service_start_error_button">Quit</string>
    <string name="close">Close</string>
    <string name="exit">Exit FM</string>
    <string name="stop">Stop</string>
    <string name="scan">Scan</string>
    <string name="error_start_scan">The scan was not able to start. Please try again.</string>
    <string name="fmradio_scanning_title">Scanning now</string>
    <string name="fmradio_found">Found</string>
    <string name="fmradio_station">station saved...</string>
    <string name="fmradio_stations">stations saved...</string>
    <string name="fmradio_scan_begin_msg">0 station saved...</string>
    <string name="fmradio_scan_confirm_msg">Do you want to automatically scan and save all available stations?</string>
    <string name="fmradio_clear_confirm_msg">Scanning for stations will remove all your currently saved stations. Would you like to continue the scan?</string>
    <string name="fmradio_no_headset_at_begin">To use FM radio, please plug in headset with round plug.</string>
    <string name="stereo">STEREO</string>
    <string name="favorites">Favorites</string>
    <string name="all_favorites">All favorites</string>
    <string name="edit_favorites">Edit favorites</string>
    <string name="fm_edit">Edit</string>
    <string name="fm_delete_confirm">Remove this station?</string>
    <string name="fm_remove">Remove</string>
    <string name="fm_cancel">Cancel</string>
    <string name="fm_station_name">Station name</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="fm_mute">Mute</string>
    <string name="fm_unmute">Unmute</string>
    <string name="fm_fav_added">was successfully added as a favorite</string>
    <string name="fm_fav_removed">was successfully removed as a favorite</string>
    <string name="fm_one_station_removed">1 station was successfully removed as a favorite</string>
    <string name="fm_stations_removed">stations were successfully removed as favorites</string>
    <string name="fm_start_prompt">Starting FM...</string>
    <string name="fm_radio_region_africa">africa</string>
    <string name="fm_radio_region_asia">asia</string>
    <string name="fm_radio_region_asia_indonesia">asia-indonesia</string>
    <string name="fm_radio_region_asia_japan">asia-japan</string>
    <string name="fm_radio_region_asia_south_korea">asia-south korea</string>
    <string name="fm_radio_region_asia_thailand">asia-thailand</string>
    <string name="fm_radio_region_australia">australia</string>
    <string name="fm_radio_region_europe">europe</string>
    <string name="fm_radio_region_europe_germany">europe-germany</string>
    <string name="fm_radio_region_europe_greece">europe-greece</string>
    <string name="fm_radio_region_europe_italy">europe-italy</string>
    <string name="fm_radio_region_europe_switzerland">europe-switzerland</string>
    <string name="fm_radio_region_india">india</string>
    <string name="fm_radio_region_latin_america">latin america</string>
    <string name="fm_radio_region_middle_east">middle east</string>
    <string name="fm_radio_region_russia">russia</string>
    <string name="fm_radio_region_usa">usa</string>
    <string name="fm_pty_list_00" />
    <string name="fm_pty_list_01">News</string>
    <string name="fm_pty_list_02">Current Affairs</string>
    <string name="fm_pty_list_03">Information</string>
    <string name="fm_pty_list_04">Sport</string>
    <string name="fm_pty_list_05">Education</string>
    <string name="fm_pty_list_06">Drama</string>
    <string name="fm_pty_list_07">Culture</string>
    <string name="fm_pty_list_08">Science</string>
    <string name="fm_pty_list_09">Varied</string>
    <string name="fm_pty_list_10">Pop Music</string>
    <string name="fm_pty_list_11">Rock Music</string>
    <string name="fm_pty_list_12">M.O.R. Music</string>
    <string name="fm_pty_list_13">Light classical</string>
    <string name="fm_pty_list_14">Serious classical</string>
    <string name="fm_pty_list_15">Other Music</string>
    <string name="fm_pty_list_16">Weather</string>
    <string name="fm_pty_list_17">Finance</string>
    <string name="fm_pty_list_18">Children\'s programs</string>
    <string name="fm_pty_list_19">Social Affairs</string>
    <string name="fm_pty_list_20">Religion</string>
    <string name="fm_pty_list_21">Phone In</string>
    <string name="fm_pty_list_22">Travel</string>
    <string name="fm_pty_list_23">Leisure</string>
    <string name="fm_pty_list_24">Jazz Music</string>
    <string name="fm_pty_list_25">Country Music</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pin">Pin</string>
    <string name="rsvp_attending">Attending</string>
    <string name="rsvp_maybe_attending">Maybe attending</string>
    <string name="rsvp_not_attending">Not attending</string>
    <string name="rsvp_add_to_calendar">Add to calendar</string>
    <string name="rsvp_ok">OK</string>
    <string name="rsvp_cancel">Cancel</string>
    <string name="opt_in_music_consent">Music consent</string>
    <string name="music_consent_option1">Yes, I want to receive Live Music \n information</string>
    <string name="music_consent_option2">No thanks</string>
    <string name="opt_in_message_screen3">You can sync music to your mobile device and start listening right away without sharing any information. If you want to get Live Music information like song recommendations, news, and artist biographies you need to agree to share your music activity. \n\nIf you agree to share, Motorola will collect information about the music on your library, your play history, and your listening preferences. We will only use this informaiton to deliver Live Music Information and we will keep it private. You can always change your Live Music Settings later by going to the settings option in the menu. \n</string>
    <string name="store_login">Sign in to your Amazon.com account</string>
    <string name="email_address">E-mail address</string>
    <string name="password_colon">Password:</string>
    <string name="username_hint">user@domain.com</string>
    <string name="enter_password">Enter Password:</string>
    <string name="remember_me">\u0020\u0020Remember Me</string>
    <string name="agree_text">\u0020\u0020I agree to the</string>
    <string name="provider_tos">\u0020terms of Use</string>
    <string name="bit_rate">Bit rate</string>
    <string name="format">Format</string>
    <string name="provider">Provider</string>
    <string name="audio_fx_key">audio_fx</string>
    <string name="audio_fx_title">Audio effects</string>
    <string name="audio_fx_summary" />
    <string name="sleep_timer_key">sleep_timer</string>
    <string name="sleep_timer_title">Sleep timer</string>
    <string name="sleep_timer_summary" />
    <string name="live_music_info_key">live_music_info</string>
    <string name="live_music_info_title">Live music information</string>
    <string name="live_music_info_summary">Retrieves album &amp; artist art, news, events, song recommendations &amp; more.</string>
    <string name="live_music_info_prefs_key">live_music_info_prefs</string>
    <string name="live_music_info_prefs_title">Live music information setting</string>
    <string name="live_music_info_prefs_summary">Manages what info is downloaded and shared with Music.</string>
    <string name="share_data_key">share_data</string>
    <string name="share_data_title">Share music data</string>
    <string name="share_data_summary">Send data privately about your music taste with Music to improve accuracy of song recommendations and Mix This Playlists.</string>
    <string name="recom_key">recom</string>
    <string name="recom_title">Recommendations</string>
    <string name="recom_summary">Recommendation of songs, music videos, music events and internet radio stations that fit your music taste.</string>
    <string name="friend_activity_key">friend_activity</string>
    <string name="friend_activity_title">Friend\'s activities</string>
    <string name="friend_activity_summary">View your friend\'s activities from music services that you are a member of.</string>
    <string name="news_key">news</string>
    <string name="news_title">Music news</string>
    <string name="news_summary">Get news on artists from your music library and on songs that you are currently playing.</string>
    <string name="LFM_Scrobbling_key">LFM_Scrobbling</string>
    <string name="LFM_Scrobbling_title">Last.fm scrobbling</string>
    <string name="LFM_Scrobbling_summary">Scrobble the songs that you play to your last.fm profile.</string>
    <string name="lyrics_key">lyrics</string>
    <string name="lyrics_title">Song lyrics</string>
    <string name="lyrics_summary">Switch song lyrics ON &amp; OFF.</string>
    <string name="lyrics_language_key">lyrics_language</string>
    <string name="lyrics_language_title">Song lyrics language</string>
    <string name="lyrics_language_summary" />
    <string name="auto_download_key">auto_download</string>
    <string name="auto_download_title">Download podcasts</string>
    <string name="auto_download_summary">Downloads the 5 most recent episodes for each subscribed podcast.</string>
    <string name="dlna_key">dlna</string>
    <string name="dlna_title">Media share settings</string>
    <string name="dlna_summary" />
    <string name="fm_key">fm</string>
    <string name="fm_title">FM radio region</string>
    <string name="fm_summary">Sets the FM tuner to your region.</string>
    <string name="att_reg">Register with AT&amp;T</string>
    <string name="att_auth_activation_code">Activation code:</string>
    <string name="att_auth_activation_code_hint">Enter code</string>
    <string name="att_auth_activation_code_1">\nPlease wait while the SMS message with the activation code is sent to your device.\n</string>
    <string name="att_auth_activation_code_2">Once you have received the code, please enter the information above and then select Submit.</string>
</resources>