<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/blurmusic_credentials_group" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/title" android:layout_width="fill_parent" style="@blur.res:style/Blur.TitleBar">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/line1" android:layout_width="240.0dip" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/store_login" android:maxLines="1" android:layout_alignParentLeft="true" />
        <ImageView android:id="@id/store_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:layout_alignParentRight="true" />
        <ProgressBar android:id="@id/login_progress" android:visibility="gone" android:layout_width="25.0dip" android:layout_height="25.0dip" android:indeterminate="true" android:layout_alignLeft="@id/store_icon" style="@android:style/Widget.ProgressBar" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_weight="1.0" android:layout_below="@id/title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@blur.res:dimen/formitem_hspacing" android:layout_marginRight="@blur.res:dimen/formitem_hspacing">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/blurmusic_credentials_username_text" android:layout_marginLeft="8.0dip" android:text="@string/email_address" style="@blur.res:style/Blur.FormItemTxt.A" />
            </RelativeLayout>
            <EditText android:id="@id/blurmusic_credentials_username_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:hint="@string/username_hint" android:maxLines="1" android:inputType="textEmailAddress">
                <requestFocus />
            </EditText>
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/blurmusic_credentials_password_text" android:layout_marginLeft="8.0dip" android:layout_marginTop="2.0dip" android:text="@string/password_colon" style="@blur.res:style/Blur.FormItemTxt.A" />
            <EditText android:id="@id/blurmusic_credentials_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:hint="@string/enter_password" android:maxLines="1" android:inputType="textPassword" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textColor="#ff000000" android:id="@id/blurmusic_credentials_auto_check" android:layout_marginLeft="8.0dip" android:text="@string/remember_me" style="@blur.res:style/Blur.FormItemTxt.A" />
                <RelativeLayout android:id="@id/check_box_right" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <CheckBox android:textColor="#ff000000" android:id="@id/blurmusic_terms_of_service_check" android:layout_marginLeft="8.0dip" android:text="@string/agree_text" style="@blur.res:style/Blur.FormItemTxt.A" />
                    <TextView android:textSize="18.0sp" android:textColor="#ff0d72b9" android:id="@id/provider_tos" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/provider_tos" android:layout_below="@id/blurmusic_terms_of_service_check" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout android:id="@id/check_box_down" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:textColor="#ff000000" android:id="@id/blurmusic_terms_of_service_check1" android:layout_marginLeft="8.0dip" android:text="@string/agree_text" style="@blur.res:style/Blur.FormItemTxt.A" />
                <TextView android:textSize="18.0sp" android:textColor="#ff0d72b9" android:id="@id/provider_tos1" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/provider_tos" android:layout_toRightOf="@id/blurmusic_terms_of_service_check1" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.motorola.android.widget.ActionBar android:id="@id/abwidget" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    </LinearLayout>
</LinearLayout>