<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout android:layout_width="200.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/loging_error1" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:id="@id/loging_error2" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pin" />
        <EditText android:id="@id/login_pin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:inputType="number" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/login_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
            <Button android:id="@id/login_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@id/login_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" />
</FrameLayout>