<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/textAreaItem" android:background="#88888888" android:layout_width="fill_parent" android:layout_height="60.0dip" style="@android:style/ButtonBar">
        <ImageView android:id="@id/event_rsvp_image" android:layout_width="60.0dip" android:layout_height="60.0dip" android:adjustViewBounds="true" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:gravity="center_vertical" android:id="@id/top_text_item" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:maxLines="1" android:includeFontPadding="false" android:shadowColor="#ff000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="3.0" android:layout_toRightOf="@id/event_rsvp_image" />
        <TextView android:ellipsize="marquee" android:id="@id/bottom_text_item" android:layout_width="fill_parent" android:layout_height="26.0dip" android:layout_marginLeft="5.0dip" android:maxLines="1" android:shadowColor="#ff000000" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="2.0" android:layout_toRightOf="@id/event_rsvp_image" android:layout_below="@id/top_text_item" />
    </RelativeLayout>
    <ScrollView android:gravity="center_horizontal" android:orientation="vertical" android:scrollbars="horizontal|vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:orientation="vertical" android:background="#77000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <RadioGroup android:orientation="vertical" android:id="@id/rsvp_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <RadioButton android:layout_gravity="left" android:id="@id/rsvp_radio_attending" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/rsvp_attending" android:layout_weight="0.0" />
                <View android:id="@id/title_separator" android:background="@android:drawable/divider_horizontal_dim_dark" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_weight="0.0" />
                <RadioButton android:layout_gravity="left" android:id="@id/rsvp_radio_maybe_attending" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/rsvp_maybe_attending" android:layout_weight="0.0" />
                <View android:id="@id/title_separator" android:background="@android:drawable/divider_horizontal_dim_dark" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_weight="0.0" />
                <RadioButton android:layout_gravity="left" android:id="@id/rsvp_radio_not_attending" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/rsvp_not_attending" android:layout_weight="0.0" />
                <View android:id="@id/title_separator" android:background="@android:drawable/divider_horizontal_dim_dark" android:layout_width="fill_parent" android:layout_height="3.0dip" android:layout_weight="0.0" />
            </RadioGroup>
            <CheckBox android:id="@id/check_add_to_calendar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/rsvp_add_to_calendar" android:layout_below="@id/rsvp_radio_group" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:background="#88888888" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" style="@android:style/ButtonBar">
        <Button android:textColor="#ffffffff" android:id="@id/rsvpOkButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rsvp_ok" android:layout_weight="1.0" />
        <Button android:textColor="#ffffffff" android:id="@id/rsvpCancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rsvp_cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>